# Regulaforge

./: .dockerignore  .editorconfig  .env.monitoring.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  commitlint.config.js  docker-compose.monitoring.yml  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_ingestion_tables.py
backend/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
backend/catboost_info/learn/: events.out.tfevents
backend/docker/: docker-compose.qdrant.yml
backend/src/regulaforge/: __init__.py  main.py
backend/src/regulaforge/agents/application/: __init__.py  agent_base.py  agent_orchestrator.py  audit.py  base_agent.py  clause_drafting.py  human_approval.py  knowledge_graph.py  legal.py  monitoring.py  notification.py  orchestrator.py  risk_prediction.py  supervisor.py  workflows.py
backend/src/regulaforge/agents/domain/: __init__.py  enums.py  events.py  models.py  repository.py
backend/src/regulaforge/agents/infrastructure/: __init__.py  message_bus.py  models.py  repository.py
backend/src/regulaforge/ai/: __init__.py
backend/src/regulaforge/application/: __init__.py
backend/src/regulaforge/common/: __init__.py  exceptions.py  patterns.py  types.py  utils.py  validation.py
backend/src/regulaforge/config/: __init__.py  constants.py  container.py  environment.py  logging.py  secrets.py  settings.py
backend/src/regulaforge/dashboard/: __init__.py
backend/src/regulaforge/document_intelligence/: __init__.py
backend/src/regulaforge/domain/: __init__.py  enums.py
backend/src/regulaforge/infrastructure/: __init__.py
backend/src/regulaforge/ingestion/: __init__.py
backend/src/regulaforge/interfaces/: __init__.py
backend/src/regulaforge/knowledge_graph/: __init__.py
backend/src/regulaforge/risk_engine/: __init__.py
backend/src/regulaforge/testing/: __init__.py  base.py
backend/src/regulaforge/xai/: __init__.py
backend/tests/: __init__.py  conftest.py  conftest_foundation.py
backend/tests/agents/: test_base_agent.py  test_domain.py  test_langgraph.py  test_orchestrator.py  test_specialized_agents.py  test_supervisor.py
backend/tests/document_intelligence/: conftest.py  test_chunking_service.py  test_classification_service.py  test_domain_models.py  test_infrastructure.py  test_metadata_service.py  test_ner_service.py  test_ocr_service.py  test_pipeline_service.py  test_relation_extraction.py  test_table_extraction.py
backend/tests/e2e/: conftest.py  test_compliance_workflow.py
backend/tests/graphrag/: test_bm25.py  test_cross_encoder.py  test_domain.py  test_embedding.py  test_evaluation.py  test_graph_constructor.py  test_groundedness.py  test_hybrid_retriever.py  test_reranker.py  test_response_generator.py
backend/tests/ingestion/: conftest.py  test_crawler_service.py  test_crawlers.py  test_detectors.py  test_document_store.py  test_domain_events.py  test_domain_models.py  test_etl_service.py  test_fingerprint_service.py  test_ingestion_integration.py  test_metadata_extractor.py  test_pipeline_downloader.py  test_pipeline_retry.py  test_pipeline_scheduler.py  test_repository.py  test_storage.py
backend/tests/integration/: conftest.py  test_ai_components.py  test_assessment_api.py  test_assessment_repository.py  test_auth_api.py  test_regulation_api.py  test_regulation_repository.py  test_user_repository.py
backend/tests/knowledge_graph/: conftest.py  test_api.py  test_cli.py  test_docintel_extraction.py  test_domain_models.py  test_entity_resolution.py  test_graph_query_service.py  test_graph_service.py  test_graphrag.py  test_neo4j_integration.py
backend/tests/ml/: conftest.py  test_compliance_prediction_pipeline.py  test_cross_validator.py  test_domain_models.py  test_evaluator.py  test_explainer.py  test_feature_store.py  test_hyperparameter_optimizer.py  test_ml_infrastructure.py  test_model_registry.py  test_model_trainer.py  test_monitor.py  test_retrainer.py  test_risk_classification_pipeline.py
backend/tests/test_document_intelligence/: test_chunking.py  test_domain.py  test_evaluation.py  test_extraction.py  test_layout.py  test_metadata.py  test_ocr.py  test_orchestrator.py
backend/tests/unit/: test_auth_use_cases.py  test_foundation.py
backend/tests/unit/ai/: __init__.py  test_hallucination_detector.py
backend/tests/unit/api/: conftest.py  test_auth.py  test_crud_endpoints.py  test_middleware.py
backend/tests/unit/application/: test_assessment_use_cases.py  test_regulation_use_cases.py
backend/tests/unit/domain/: test_assessment.py  test_entities.py  test_events.py  test_regulation.py  test_value_objects.py
backend/tests/unit/infrastructure/: test_security.py  test_settings.py
(+568 files in other folders)
